@@ -1,6 +1,7 @@
 Systre 1.1.3:
 
-- Cell vectors for monoclinic groups should now comform to IUCr rules.
+- If edges are computed, vertex-degrees are no longer silently changed.
+- Better cell vectors are now found for monoclinic groups.
 - Bug fix: some monoclinic groups could produce invalid (and suppressed) output.
 
 Systre 1.1.2:
